--- a/index.html
+++ b/index.html
@@ -5,6 +5,169 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__menu-item header__menu-item_active">
+            <a class="header__menu-item_active" href="#0">главная</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header__logo-image" href="#0">
+       <img 
+        src="./images/logo-black.svg" 
+        alt="Логотип черный"></a>
+      <address  class="address">
+        <a class="contacts" href="tel:+70000000">+9 999 555 5555</a>
+        <p>
+          <a class="contacts" href="mailto:mail@example.com">info@sobaka.ge</a>
+        </p>
+        наб. Принсенграхт 263-<br />265, Амстердам</address>
+      </div>
+    </header>
+    <main>
+      <section class="cover">
+        <div class="overlay"></div>
+          <h1 class="cover__title">
+            <span class="accent-span">ОНО</span>
+            <span class="accent-span text-center">ТЕБЕ</span>
+            <span class="accent-span text-right">НАДО</span>
+          </h1>
+          <div class="description">
+            <p>Аукцион вещей, в которые никто не верил</p>
+            <button class="description_button">Сделать ставку</button>
+        </div>
+      </section>
+      <div class="lots">
+        <h1 class="lots__heading">ЛОТЫ</h1>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item card_type_film">
+              <article class="card">
+                <div class="overlay"></div>
+                  <a class="card__title" href="#0"
+                  >Фильм режиссёра, который бросил киношколу</a
+                 >
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article>
+          </li>
+          <li class="lots__card-list-item card_type_book">
+              <article class="card">
+               <div class="overlay"></div>
+                <a class="card__title" href=""
+                  >Книга, где описан один скучный день из жизни рекламного
+                  агента</a
+                >
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
+          </li>
+          <li class="lots__card-list-item card_type_picture">
+              <article class="card">
+               <div class="overlay"></div>
+                <a class="card__title" href=""
+                  >Картина, которую повторит даже 5-летний сын маминой
+                  подруги</a
+                >
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+          </li>
+          </div>
+        </ul>
+        <a href="#0" class="lots__look-more-link">посмотреть больше</a>
+      </div>
+      <div class="about">
+        <div class="about__card-list-item">
+          <div class="round">
+            <img src="./images/logo-white.svg" class="round_img" />
+          </div>
+        </div>
+        <div>
+          <h1 class="about__title">Об аукционе</h1>
+          <div class="about__text">
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+          </div>
+          <p class="about__text_no_padding">
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          </p>
+        </div>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="footer_address">
+        <a class="contacts" href="tel:+70000000">+9 999 555 5555</a>
+        <p>
+          <a class="contacts" href="mailto:mail@example.com">info@sobaka.ge</a>
+        </p>
+        <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
+      </div>
+      <nav class="foorter">
+        <ul class="footer__links-list">
+          <li class="footer__menu-item footer__menu-item_active">
+            <a class="footer__menu-item_active" href="#0">главная</a>
+          </li>
+          <li class="footer__menu-item">
+            <a class="footer__menu-link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="footer__menu-item">
+            <a class="footer__menu-link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="footer__social-list">
+        <a class="footer__social-link" href="https://youtube.com">
+          <img
+            class="footer__social-icon"
+            src="./images/yt.svg"
+            alt="Картинка YouTube"
+        /></a>
+        <a class="footer__social-link" href="https://vk.ru">
+          <img
+            class="footer__social-icon"
+            src="./images/vk.svg"
+            alt="Картинка VK"
+          /></a>
+        <a class="footer__social-link" href="https://Pinterest.com">
+          <img
+            class="footer__social-icon"
+            src="./images/pinterest.svg"
+            alt="Картинка Printrest" />
+        </a>
+      </div>
+    </footer>
+  </body>
 </html>
