--- a/index.html
+++ b/index.html
@@ -25,86 +25,85 @@
         </ul>
       </nav>
       <a class="header__logo-image" href="#0">
-       <img 
-        src="./images/logo-black.svg" 
-        alt="Логотип черный"></a>
-      <address  class="address">
+        <img src="./images/logo-black.svg" alt="Логотип черный"
+      /></a>
+      <address class="address">
         <a class="contacts" href="tel:+70000000">+9 999 555 5555</a>
         <p>
           <a class="contacts" href="mailto:mail@example.com">info@sobaka.ge</a>
         </p>
-        наб. Принсенграхт 263-<br />265, Амстердам</address>
-      </div>
+        наб. Принсенграхт 263-<br />265, Амстердам
+      </address>
     </header>
     <main>
       <section class="cover">
         <div class="overlay"></div>
-          <h1 class="cover__title">
-            <span class="accent-span">ОНО</span>
-            <span class="accent-span text-center">ТЕБЕ</span>
-            <span class="accent-span text-right">НАДО</span>
-          </h1>
-          <div class="description">
-            <p>Аукцион вещей, в которые никто не верил</p>
-            <button class="description_button">Сделать ставку</button>
+        <h1 class="cover__title">
+          <span class="accent-span">ОНО</span>
+          <span class="accent-span text-center">ТЕБЕ</span>
+          <span class="accent-span text-right">НАДО</span>
+        </h1>
+        <div class="description">
+          <p>Аукцион вещей, в которые никто не верил</p>
+          <button class="description_button">Сделать ставку</button>
         </div>
       </section>
       <div class="lots">
         <h1 class="lots__heading">ЛОТЫ</h1>
         <ul class="lots__card-list">
           <li class="lots__card-list-item card_type_film">
-              <article class="card">
-                <div class="overlay"></div>
-                  <a class="card__title" href="#0"
-                  >Фильм режиссёра, который бросил киношколу</a
-                 >
-                <p class="card__text">
-                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                  ставка, если бы вы не знали, что режиссёр — Пол Томас
-                  Андерсон?
-                </p>
-              </article>
+            <article class="card">
+              <div class="overlay"></div>
+              <a class="card__title" href="#0"
+                >Фильм режиссёра, который бросил киношколу</a
+              >
+              <p class="card__text">
+                Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+              </p>
+            </article>
           </li>
           <li class="lots__card-list-item card_type_book">
-              <article class="card">
-               <div class="overlay"></div>
-                <a class="card__title" href=""
-                  >Книга, где описан один скучный день из жизни рекламного
-                  агента</a
-                >
-                <p class="card__text">
-                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
-                  с переходами на древнеанглийский. В ней одновременно
-                  рассказывается о 16 июня 1904 года и об истории литературы,
-                  начиная с античных времён. И это всё накладывается на
-                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
-                  Джеймса Джойса?
-                </p>
-              </article>
+            <article class="card">
+              <div class="overlay"></div>
+              <a class="card__title" href=""
+                >Книга, где описан один скучный день из жизни рекламного
+                агента</a
+              >
+              <p class="card__text">
+                Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
+                переходами на древнеанглийский. В ней одновременно
+                рассказывается о 16 июня 1904 года и об истории литературы,
+                начиная с античных времён. И это всё накладывается на эпическую
+                поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса
+                Джойса?
+              </p>
+            </article>
           </li>
           <li class="lots__card-list-item card_type_picture">
-              <article class="card">
-               <div class="overlay"></div>
-                <a class="card__title" href=""
-                  >Картина, которую повторит даже 5-летний сын маминой
-                  подруги</a
-                >
-                <p class="card__text">
-                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
-                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                  котиков... Сколько бы вы на такое поставили, если бы не знали,
-                  что это — одна из революционных работ Кандинского?
-                </p>
-              </article>
+            <article class="card">
+              <div class="overlay"></div>
+              <a class="card__title" href=""
+                >Картина, которую повторит даже 5-летний сын маминой подруги</a
+              >
+              <p class="card__text">
+                Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                котиков... Сколько бы вы на такое поставили, если бы не знали,
+                что это — одна из революционных работ Кандинского?
+              </p>
+            </article>
           </li>
-          </div>
         </ul>
         <a href="#0" class="lots__look-more-link">посмотреть больше</a>
       </div>
       <div class="about">
         <div class="about__card-list-item">
           <div class="round">
-            <img src="./images/logo-white.svg" class="round_img" />
+            <img
+              src="./images/logo-white.svg"
+              class="round_img"
+              alt="Логотип" />
           </div>
         </div>
         <div>
@@ -160,7 +159,7 @@
             class="footer__social-icon"
             src="./images/vk.svg"
             alt="Картинка VK"
-          /></a>
+        /></a>
         <a class="footer__social-link" href="https://Pinterest.com">
           <img
             class="footer__social-icon"
