--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__menu-item header__menu-item_active">
-            <a class="header__menu-item_active" href="#0">главная</a>
+            <a class="header__menu-link" href="#0">главная</a>
           </li>
           <li class="header__menu-item">
             <a class="header__menu-link" href="#0">посмотреть лоты</a>
@@ -45,55 +45,63 @@
         </h1>
         <div class="description">
           <p>Аукцион вещей, в которые никто не верил</p>
-          <button class="description_button">Сделать ставку</button>
+          <button class="description_button" type="button">
+            Сделать ставку
+          </button>
         </div>
       </section>
       <div class="lots">
-        <h1 class="lots__heading">ЛОТЫ</h1>
+        <h2 class="lots__heading">ЛОТЫ</h2>
         <ul class="lots__card-list">
-          <li class="lots__card-list-item card_type_film">
-            <article class="card">
-              <div class="overlay"></div>
-              <a class="card__title" href="#0"
-                >Фильм режиссёра, который бросил киношколу</a
-              >
-              <p class="card__text">
-                Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
-              </p>
-            </article>
-          </li>
-          <li class="lots__card-list-item card_type_book">
-            <article class="card">
-              <div class="overlay"></div>
-              <a class="card__title" href=""
-                >Книга, где описан один скучный день из жизни рекламного
-                агента</a
-              >
-              <p class="card__text">
-                Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
-                переходами на древнеанглийский. В ней одновременно
-                рассказывается о 16 июня 1904 года и об истории литературы,
-                начиная с античных времён. И это всё накладывается на эпическую
-                поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса
-                Джойса?
-              </p>
-            </article>
-          </li>
-          <li class="lots__card-list-item card_type_picture">
-            <article class="card">
-              <div class="overlay"></div>
-              <a class="card__title" href=""
-                >Картина, которую повторит даже 5-летний сын маминой подруги</a
-              >
-              <p class="card__text">
-                Ну действительно, там линия, тут кружочек, а здесь и вовсе
-                что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                котиков... Сколько бы вы на такое поставили, если бы не знали,
-                что это — одна из революционных работ Кандинского?
-              </p>
-            </article>
-          </li>
+          <a class="card-link" href="#0">
+            <li class="lots__card-list-item card_type_film">
+              <article class="card">
+                <div class="overlay"></div>
+                <p class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </p>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article>
+            </li>
+          </a>
+          <a class="card-link" href="#0">
+            <li class="lots__card-list-item card_type_book">
+              <article class="card">
+                <div class="overlay"></div>
+                <p class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </p>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
+            </li>
+          </a>
+          <a class="card-link" href="#0">
+            <li class="lots__card-list-item card_type_picture">
+              <article class="card">
+                <div class="overlay"></div>
+                <p class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </p>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </li>
+          </a>
         </ul>
         <a href="#0" class="lots__look-more-link">посмотреть больше</a>
       </div>
@@ -106,16 +114,16 @@
               alt="Логотип" />
           </div>
         </div>
-        <div>
-          <h1 class="about__title">Об аукционе</h1>
-          <div class="about__text">
+        <div class="about__column">
+          <h3 class="about__title">Об аукционе</h3>
+          <p class="about__text">
             Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
             один аукцион. Потому что кому нужен дневник девочки-подростка или
             картина, которую может нарисовать даже ребёнок? Кому нужны все эти
             странные вещи, созданные любителями?
-          </div>
-          <p class="about__text_no_padding">
+          </p>
+          <p class="about__text">
             Слишком сложные или, наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками. Непринятые и непонятые.
             Когда-то они казались просто неудачными. Но, несмотря на критику,
@@ -132,12 +140,12 @@
         <p>
           <a class="contacts" href="mailto:mail@example.com">info@sobaka.ge</a>
         </p>
-        <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
+        <p>наб. Принсенграхт 263-265,<br />Амстердам</p>
       </div>
       <nav class="foorter">
         <ul class="footer__links-list">
           <li class="footer__menu-item footer__menu-item_active">
-            <a class="footer__menu-item_active" href="#0">главная</a>
+            <a class="footer__menu-link footer__menu-item" href="#0">главная</a>
           </li>
           <li class="footer__menu-item">
             <a class="footer__menu-link" href="#0">посмотреть лоты</a>
@@ -148,19 +156,25 @@
         </ul>
       </nav>
       <div class="footer__social-list">
-        <a class="footer__social-link" href="https://youtube.com">
+        <a
+          class="footer__social-link"
+          href="https://youtube.com"
+          target="_blank">
           <img
             class="footer__social-icon"
             src="./images/yt.svg"
             alt="Картинка YouTube"
         /></a>
-        <a class="footer__social-link" href="https://vk.ru">
+        <a class="footer__social-link" href="https://vk.ru" target="_blank">
           <img
             class="footer__social-icon"
             src="./images/vk.svg"
             alt="Картинка VK"
         /></a>
-        <a class="footer__social-link" href="https://Pinterest.com">
+        <a
+          class="footer__social-link"
+          href="https://Pinterest.com"
+          target="_blank">
           <img
             class="footer__social-icon"
             src="./images/pinterest.svg"
