--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
           </button>
         </div>
       </section>
-      <div class="lots">
+      <section class="lots">
         <h2 class="lots__heading">ЛОТЫ</h2>
         <ul class="lots__card-list">
-          <li class="lots__card-list-item card_type_film">
+          <li class="lots__card-list-item">
             <a class="card-link" href="#0">
-              <article class="card">
+              <article class="card card_type_film">
                 <div class="overlay"></div>
-                <p class="card__title">
+                <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
-                </p>
+                </h3>
                 <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
@@ -68,13 +68,13 @@
               </article>
             </a>
           </li>
-          <li class="lots__card-list-item card_type_book">
+          <li class="lots__card-list-item">
             <a class="card-link" href="#0">
-              <article class="card">
+              <article class="card card_type_book">
                 <div class="overlay"></div>
-                <p class="card__title">
+                <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
-                </p>
+                </h3>
                 <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
@@ -86,13 +86,13 @@
               </article>
             </a>
           </li>
-          <li class="lots__card-list-item card_type_picture">
+          <li class="lots__card-list-item">
             <a class="card-link" href="#0">
-              <article class="card">
+              <article class="card card_type_picture">
                 <div class="overlay"></div>
-                <p class="card__title">
+                <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
-                </p>
+                </h3>
                 <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
@@ -104,8 +104,8 @@
           </li>
         </ul>
         <a href="#0" class="lots__look-more-link">посмотреть больше</a>
-      </div>
-      <div class="about">
+      </section>
+      <section class="about">
         <div class="about__card-list-item">
           <div class="round">
             <img
@@ -132,7 +132,7 @@
             продолжали верить их создатели. И сейчас эти лоты стали культовыми.
           </p>
         </div>
-      </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer_address">
